[gd_scene load_steps=4 format=3 uid="uid://bi6uykfg167sj"]

[ext_resource type="Script" path="res://character/car.gd" id="1_js6pa"]
[ext_resource type="PackedScene" uid="uid://cg241ljt7tomh" path="res://character/trail.tscn" id="2_xpyle"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_8ytfd"]
radius = 21.0
height = 96.0

[node name="Car" type="CharacterBody2D"]
script = ExtResource("1_js6pa")

[node name="Collision" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_8ytfd")

[node name="Polygon2D" type="Polygon2D" parent="."]

[node name="TrailPos1" type="Marker2D" parent="."]
position = Vector2(-32, -16)

[node name="Trail" parent="TrailPos1" instance=ExtResource("2_xpyle")]

[node name="TrailPos2" type="Marker2D" parent="."]
position = Vector2(32, -16)

[node name="Trail" parent="TrailPos2" instance=ExtResource("2_xpyle")]

[node name="TrailPos3" type="Marker2D" parent="."]
position = Vector2(-32, 16)

[node name="Trail" parent="TrailPos3" instance=ExtResource("2_xpyle")]

[node name="TrailPos4" type="Marker2D" parent="."]
position = Vector2(32, 16)

[node name="Trail" parent="TrailPos4" instance=ExtResource("2_xpyle")]
